added exercises x numpy 2 solved in my_tmp

--- a/2-Data Analysis/1-Numpy/1_Numpy.ipynb
+++ b/2-Data Analysis/1-Numpy/1_Numpy.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "'1.18.5'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,12 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -452,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -11912,7 +11917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11930,7 +11935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -11955,7 +11960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -12084,19 +12089,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.08326452 0.61452772 0.83432095 0.79157139 0.78625207 0.18961322\n",
-      " 0.14756882 0.96881752 0.02653003 0.29171278]\n",
-      "[[2 1 4 2]\n",
-      " [2 0 4 2]\n",
-      " [4 0 1 3]]\n",
-      "[5 6 8 7 7 8 7 9 7 7]\n"
+      "[[[0.17552375 0.32009391 0.91212909 0.25788088 0.04383465 0.76924861]\n",
+      "  [0.80732934 0.00482914 0.24750553 0.6810649  0.15960458 0.42484197]\n",
+      "  [0.3017357  0.93080693 0.65510212 0.27970343 0.00111389 0.42702512]\n",
+      "  [0.16894932 0.7177058  0.201462   0.24773203 0.7860617  0.02149783]\n",
+      "  [0.18621822 0.57382161 0.02328511 0.27324216 0.31572072 0.14740626]]\n",
+      "\n",
+      " [[0.06900184 0.7425264  0.36234489 0.34423936 0.78437144 0.15951143]\n",
+      "  [0.37231004 0.04170114 0.21553101 0.33427492 0.44904754 0.36011357]\n",
+      "  [0.25288685 0.82260455 0.69031509 0.59974794 0.6093564  0.04129954]\n",
+      "  [0.52001739 0.40478816 0.86591159 0.11657438 0.84565631 0.03840294]\n",
+      "  [0.02074045 0.39323276 0.43727502 0.19950736 0.87628614 0.21743918]]\n",
+      "\n",
+      " [[0.9906575  0.6935611  0.54925718 0.61760033 0.6516061  0.93126586]\n",
+      "  [0.69302892 0.05710585 0.18597193 0.33049024 0.69802469 0.55019095]\n",
+      "  [0.46830703 0.99151184 0.44676119 0.02502694 0.67300727 0.46488112]\n",
+      "  [0.5915173  0.05252653 0.24133026 0.49479461 0.32560357 0.99060046]\n",
+      "  [0.14045461 0.70511835 0.11596096 0.24631592 0.71455533 0.99533389]]\n",
+      "\n",
+      " [[0.66080998 0.4394297  0.44125681 0.41924208 0.26571974 0.27895728]\n",
+      "  [0.66898486 0.32002254 0.81674475 0.46414986 0.01726063 0.69449464]\n",
+      "  [0.20045291 0.58555713 0.17171112 0.2007411  0.13988334 0.38834309]\n",
+      "  [0.2608069  0.43167579 0.07136294 0.87385251 0.49304532 0.10285809]\n",
+      "  [0.18734551 0.83591005 0.80932415 0.40786168 0.91965788 0.35933622]]\n",
+      "\n",
+      " [[0.16429847 0.48858792 0.06626804 0.21277314 0.86049502 0.80609611]\n",
+      "  [0.44602207 0.16299535 0.64574916 0.69466238 0.52642076 0.67175994]\n",
+      "  [0.29569861 0.42559483 0.86171394 0.22118813 0.47085373 0.96898629]\n",
+      "  [0.76735369 0.94561315 0.90941432 0.23158484 0.42012957 0.21136665]\n",
+      "  [0.293711   0.55608786 0.25561236 0.08530984 0.047006   0.96762996]]\n",
+      "\n",
+      " [[0.44397812 0.40120697 0.02388584 0.74071427 0.27673604 0.93106659]\n",
+      "  [0.53344125 0.83796689 0.9840796  0.72523766 0.96317292 0.71453749]\n",
+      "  [0.72714303 0.48149889 0.53662501 0.71732904 0.31381386 0.55533717]\n",
+      "  [0.20556724 0.64913174 0.67022054 0.42272645 0.14805743 0.09599995]\n",
+      "  [0.59630374 0.31571988 0.28265288 0.91763384 0.91692655 0.70532281]]\n",
+      "\n",
+      " [[0.44495177 0.05867402 0.11320689 0.34632859 0.42545643 0.98402818]\n",
+      "  [0.69254088 0.57999977 0.95730768 0.62455924 0.33272267 0.58670609]\n",
+      "  [0.34553856 0.92735105 0.54089741 0.01917509 0.799501   0.71835295]\n",
+      "  [0.15980353 0.74068409 0.1427549  0.37217793 0.24992039 0.58527277]\n",
+      "  [0.68054834 0.05722324 0.7931432  0.35457505 0.50121241 0.10823137]]\n",
+      "\n",
+      " [[0.2823636  0.75980951 0.09635511 0.41424671 0.41990672 0.29799785]\n",
+      "  [0.70969089 0.10165541 0.90741308 0.98840038 0.5211982  0.23991914]\n",
+      "  [0.05604686 0.44717766 0.86599272 0.04148528 0.72945052 0.55220454]\n",
+      "  [0.01510906 0.39807144 0.61329161 0.37296845 0.1117531  0.08873127]\n",
+      "  [0.5120273  0.66493829 0.96203048 0.661059   0.27001692 0.93385174]]\n",
+      "\n",
+      " [[0.54685021 0.29071979 0.72083289 0.3448286  0.92830613 0.52356023]\n",
+      "  [0.150551   0.74153478 0.13015336 0.2469798  0.8630234  0.06756661]\n",
+      "  [0.99339247 0.44690807 0.71254625 0.12735307 0.15313791 0.35875592]\n",
+      "  [0.65678585 0.64271458 0.40208753 0.81044119 0.05115634 0.50000751]\n",
+      "  [0.4522508  0.44369101 0.07539602 0.57316211 0.65736937 0.85585903]]\n",
+      "\n",
+      " [[0.1546867  0.41137048 0.697192   0.94816843 0.97538031 0.91554714]\n",
+      "  [0.04710179 0.41599862 0.29539782 0.59919907 0.25683941 0.90522392]\n",
+      "  [0.58145569 0.04209116 0.96565902 0.9472948  0.57878011 0.45438252]\n",
+      "  [0.31826977 0.14749612 0.26895551 0.99901346 0.23330045 0.62555568]\n",
+      "  [0.33182199 0.63651189 0.44820805 0.44465806 0.44488725 0.0263626 ]]]\n",
+      "[[1 4 1 4]\n",
+      " [2 3 2 3]\n",
+      " [4 3 2 2]]\n",
+      "[9 6 9 6 6 5 7 8 8 5]\n"
      ]
     }
    ],
@@ -12123,31 +12190,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.19151945 0.62210877 0.43772774 0.78535858 0.77997581 0.27259261\n",
-      " 0.27646426 0.80187218 0.95813935 0.87593263]\n",
-      "[0.48932698 0.05933244 0.36620243 0.51886544 0.59822501 0.43061449\n",
-      " 0.17863405 0.2852539  0.07143863 0.18471334]\n",
-      "[0.07538737 0.17739967 0.54298275 0.2538911  0.71740475 0.43446563\n",
-      " 0.40151473 0.17016439 0.21885597 0.67691004]\n"
+      "[0.55735327 0.54176063 0.56042378 0.38204809 0.11909418 0.84599912\n",
+      " 0.73974161 0.93235756 0.85932801 0.70810463]\n",
+      "[0.68096875 0.4086023  0.77458462 0.9844762  0.96548486 0.76197066\n",
+      " 0.72310304 0.1884888  0.47596313 0.28874562]\n"
      ]
     }
    ],
    "source": [
-    "np.random.seed(1234)\n",
+    "np.random.seed(555)\n",
+    "print(np.random.rand(10))\n",
     "print(np.random.rand(10))\n",
     "\n",
     "np.random.seed(5678)\n",
-    "print(np.random.rand(10))\n",
+    "#print(np.random.rand(10))\n",
     "\n",
     "np.random.seed(None)\n",
-    "print(np.random.rand(10))"
+    "#print(np.random.rand(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.80393052, 0.44881998, 0.10962717, 0.43455711, 0.02232689,\n",
+       "       0.94551587, 0.38665202, 0.54842122, 0.40502326, 0.172673  ])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(10)"
    ]
   },
   {
@@ -12180,7 +12267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -12191,14 +12278,15 @@
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Matriz de 0s\n",
-    "np.zeros((3,3))"
+    "np.zeros((3,3))\n",
+    "np.zeros([3,3])"
    ]
   },
   {
@@ -12226,19 +12314,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-4f28770ec43d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Matriz con 100es\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[100, 100, 100],\n",
+       "       [100, 100, 100],\n",
+       "       [100, 100, 100]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -12270,10 +12359,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Futbol\n",
+      "Tenis\n",
+      "<U6\n",
+      "<class 'numpy.ndarray'>\n",
+      "[10.   9.5  9.   8.5  8.   7.5  7.   6.5  6.   5.5  5.   4.5  4.   3.5\n",
+      "  3.   2.5  2.   1.5  1.   0.5  0. ]\n",
+      "[[16 11]\n",
+      " [19 17]\n",
+      " [20 13]\n",
+      " [15 14]\n",
+      " [10 17]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1.\n",
+    "sports = np.array([\"Futbol\", \"Basket\", \"Tenis\"])\n",
+    "\n",
+    "# 2.\n",
+    "print(sports[0])\n",
+    "print(sports[-1])\n",
+    "\n",
+    "# 3.\n",
+    "print(sports.dtype)\n",
+    "print(type(sports))\n",
+    "\n",
+    "# 4. \n",
+    "print(np.arange(10, -0.5, -0.5))\n",
+    "\n",
+    "# 5.\n",
+    "np.random.seed(9267)\n",
+    "print(np.random.randint(10, 21, size=(5,2)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -12600,7 +12725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -12666,10 +12791,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "Todos los elementos, pero de dos en dos [0 2 4 6 8]\n",
+      "Todos los elementos, pero de dos en dos [0 2 4 6 8]\n",
+      "Todos los elementos, pero de dos en dos, a partir del segundo item [1 3 5 7 9]\n",
+      "Todo, pero invertido [9 8 7 6 5 4 3 2 1 0]\n",
+      "Todo, pero invertido [9 8 7 6 5 4 3 2 1 0]\n",
+      "Obtén los últimos dos items, pero invertidos [9 8]\n",
+      "Obtén los últimos dos items, pero invertidos [9 8]\n",
+      "Todo, excepto los ultimos dos items, invertido. [7 6 5 4 3 2 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(10)\n",
+    "print(x)\n",
+    "\n",
+    "# 1.\n",
+    "print(\"Todos los elementos, pero de dos en dos\", x[::2])\n",
+    "print(\"Todos los elementos, pero de dos en dos\", x[0::2])\n",
+    "\n",
+    "# 2.\n",
+    "print(\"Todos los elementos, pero de dos en dos, a partir del segundo item\",x[1::2])\n",
+    "\n",
+    "# 3.\n",
+    "print(\"Todo, pero invertido\", x[::-1])\n",
+    "print(\"Todo, pero invertido\", x[-1::-1])\n",
+    "\n",
+    "# 4.\n",
+    "print(\"Obtén los últimos dos items, pero invertidos\", x[-1:-3:-1])\n",
+    "\n",
+    "# 5.\n",
+    "print(\"Todo, excepto los ultimos dos items, invertido.\", x[-3::-1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -12770,13 +12931,6 @@
     "print(x[x_bools])\n",
     "print(x_bools[x_bools])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -13262,7 +13416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -13649,15 +13803,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "201 ms ± 22.1 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "994 µs ± 30.2 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "163 ms ± 1.81 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "1.3 ms ± 29 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -13782,16 +13936,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.70984787 0.13504845 0.01141876 0.6391512 ]\n",
-      " [0.03954763 0.05162746 0.21942782 0.28474092]\n",
-      " [0.17953068 0.27237347 0.98696914 0.05785024]]\n"
+      "[[0.06616379 0.32594305 0.87504278 0.43469928]\n",
+      " [0.71833719 0.16970874 0.16936119 0.4855486 ]\n",
+      " [0.7500446  0.15698184 0.68967402 0.96607009]]\n"
      ]
     }
    ],
@@ -13809,16 +13963,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.587533644680246"
+       "5.807575176558076"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13836,16 +13990,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.03954763, 0.05162746, 0.01141876, 0.05785024])"
+       "array([0.06616379, 0.15698184, 0.16936119, 0.43469928])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13865,9 +14019,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.87504278, 0.71833719, 0.96607009])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "M.max(axis=1)"
    ]
