--- a/mis_soluciones/Ejercicios Numpy II.ipynb
+++ b/mis_soluciones/Ejercicios Numpy II.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "array([8, 7])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "array([2, 1, 0])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "       [ 5,  4,  3,  2,  1]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -507,23 +507,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[12  5 10 18  8 24 16 21 24  3]\n",
-      " [11 10 14 19 16 20 13 17 19 14]\n",
-      " [ 0 11 22  6 13 10  4  2 23 16]\n",
-      " [17 16 18  3  7 10 20  7 11 19]\n",
-      " [21 21 18 12  7  1 22  2  7  9]\n",
-      " [20  5 21  8 12  4  9  9 21 18]\n",
-      " [19  9 17  6  3  4  3 25 23 23]\n",
-      " [19 19 25 22 13  4 25 17 10  3]\n",
-      " [13 10 23  7 17  3  4  3 22 18]\n",
-      " [23 23 16 23  6 23  0  5  1  1]]\n",
+      "[[ 5  7  8 14 10 22 20  4  3 17]\n",
+      " [23 20  5  7 24  4 17  1  7  5]\n",
+      " [13 23 14  3 19 10 22 20  8 13]\n",
+      " [ 2  7  1 17 11  4 14 12 10  6]\n",
+      " [22 10 13  2 20 21  1 13  4 23]\n",
+      " [21  6  9  3 14 24  8  7 16  2]\n",
+      " [ 0 22 10  8  5  7  8  0 16 10]\n",
+      " [20  5 23  9 21 25 19  3 10  5]\n",
+      " [ 9 24  9 24  6  3  8  3 16  1]\n",
+      " [16 25 14 25  6  1 23 19 22 17]]\n",
       "0\n",
       "25\n"
      ]
@@ -547,16 +547,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[29 44 40 81 19 84 70 30 91 27 76 53 90 36 17 67 59 10 38 95 20 81 71 54\n",
-      " 64 61 35 95 52 13]\n",
-      "53.4\n"
+      "[ 76  18  67  47  86  90  55  53  19  48  25  36  66  81  23  71  16  76\n",
+      "  69  22  62  20  43  96  71  36  21  49 100  45]\n",
+      "52.9\n"
      ]
     }
    ],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -712,23 +712,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[27 13 50 87 68]\n",
-      " [56 53 74 24 39]\n",
-      " [34 78 40 37 61]\n",
-      " [30 26 62 80 16]\n",
-      " [64 85 92 40 29]]\n",
-      "[[-1.02196108 -1.62820917 -0.02598206  1.57624505  0.75347978]\n",
-      " [ 0.23383855  0.10392824  1.01330039 -1.15187138 -0.50231985]\n",
-      " [-0.71883703  1.18651413 -0.45901642 -0.58892672  0.45035573]\n",
-      " [-0.89205077 -1.06526451  0.49365916  1.273121   -1.49829887]\n",
-      " [ 0.58026603  1.48963818  1.79276223 -0.45901642 -0.9353542 ]]\n"
+      "[[40 83 45 32 57]\n",
+      " [95 48 56 33 34]\n",
+      " [71 82 47 35 44]\n",
+      " [93 53 10 97 88]\n",
+      " [16 43 15 70 56]]\n",
+      "[[-0.54989136  1.17352909 -0.34949364 -0.87052773  0.13146091]\n",
+      " [ 1.65448364 -0.229255    0.09138136 -0.83044818 -0.79036864]\n",
+      " [ 0.69257455  1.13344955 -0.26933455 -0.75028909 -0.38957318]\n",
+      " [ 1.57432455 -0.02885727 -1.75227773  1.73464273  1.37392682]\n",
+      " [-1.51180045 -0.42965273 -1.55188     0.652495    0.09138136]]\n"
      ]
     }
    ],
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,13 +806,14 @@
     "    else:\n",
     "        pass\n",
     "\n",
-    "def colocar_barco(tablero,tamanio = 4, orientacion = 'O'):\n",
+    "def colocar_barco(tablero,tamanio = 4, orientacion = 'E'):\n",
+    "    \"Coloca barco por defecto con orientacion deseada\"\n",
     "    my_orien = {'S':(-1,0), 'N':(1,0), 'E':(0,1), 'O':(0,-1)}\n",
     "    x = rnd.randint(10)\n",
     "    y = rnd.randint(10)\n",
     "    x_def, y_def = x,y\n",
     "    for e in range(tamanio):\n",
-    "        if tablero[x,y] == ' ':\n",
+    "        if  0<=x<10 and 0<=y<10 and tablero[x,y] == ' ':\n",
     "            x += my_orien[orientacion][0]\n",
     "            y += my_orien[orientacion][1]\n",
     "\n",
@@ -834,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -842,16 +843,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "No pude colocar el barco\n",
-      "No pude colocar el barco\n",
-      "[[' ' 'X' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      "Barco colocado!\n",
+      "Barco colocado!\n",
+      "[[' ' 'X' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
       " [' ' 'O' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' '-' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
      ]
