--- a/2-Data Analysis/1-Numpy/2_Numpy.ipynb
+++ b/2-Data Analysis/1-Numpy/2_Numpy.ipynb
@@ -907,6 +907,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = np.zeros(10)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {
     "collapsed": false,
@@ -948,6 +969,27 @@
     "A reduce repeatedly applies a given operation to the elements of an array until only a single result remains.\n",
     "\n",
     "For example, calling ``reduce`` on the ``add`` ufunc returns the sum of all elements in the array:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.arange(1, 6)\n",
+    "x"
    ]
   },
   {
@@ -1017,25 +1059,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1,  3,  6, 10, 15], dtype=int32)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.add.accumulate(x)"
    ]
@@ -1080,6 +1111,27 @@
     "\n",
     "Finally, any ufunc can compute the output of all pairs of two different inputs using the ``outer`` method.\n",
     "This allows you, in one line, to do things like create a multiplication table:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.arange(1, 6)\n",
+    "x"
    ]
   },
   {
@@ -1415,17 +1467,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]]\n",
+      "[0 1 2]\n"
+     ]
+    }
+   ],
    "source": [
     "M = np.ones((2, 3))\n",
-    "a = np.arange(3)"
+    "a = np.arange(3)\n",
+    "print(M)\n",
+    "print(a)"
    ]
   },
   {
@@ -1487,17 +1551,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0]\n",
+      " [1]\n",
+      " [2]]\n",
+      "[0 1 2]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.arange(3).reshape((3, 1))\n",
-    "b = np.arange(3)"
+    "b = np.arange(3)\n",
+    "print(a)\n",
+    "print(b)"
    ]
   },
   {
@@ -1571,6 +1648,28 @@
    "source": [
     "M = np.ones((3, 2))\n",
     "a = np.arange(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]]\n",
+      "[[0]\n",
+      " [1]\n",
+      " [2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(M)\n",
+    "print(a)"
    ]
   },
   {
@@ -1760,16 +1859,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.4236548 , 0.64589411, 0.43758721],\n",
+       "       [0.891773  , 0.96366276, 0.38344152],\n",
+       "       [0.79172504, 0.52889492, 0.56804456],\n",
+       "       [0.92559664, 0.07103606, 0.0871293 ],\n",
+       "       [0.0202184 , 0.83261985, 0.77815675],\n",
+       "       [0.87001215, 0.97861834, 0.79915856],\n",
+       "       [0.46147936, 0.78052918, 0.11827443],\n",
+       "       [0.63992102, 0.14335329, 0.94466892],\n",
+       "       [0.52184832, 0.41466194, 0.26455561],\n",
+       "       [0.77423369, 0.45615033, 0.56843395]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X = np.random.random((10, 3))"
+    "X = np.random.random((10, 3))\n",
+    "X"
    ]
   },
   {
@@ -1977,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1991,7 +2111,7 @@
        "(365,)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2303,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -2319,7 +2439,7 @@
        "       [2, 4, 7, 6]])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2475,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -2489,7 +2609,7 @@
        "array([4, 2, 2])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2670,7 +2790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -2681,16 +2801,16 @@
     {
      "data": {
       "text/plain": [
-       "29"
+       "7"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum((inches > 0.5) & (inches < 1))"
+    "np.sum((inches > 1) & (inches < 4))"
    ]
   },
   {
@@ -2836,7 +2956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -2852,7 +2972,7 @@
        "       [ True,  True, False, False]])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2870,7 +2990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -2884,7 +3004,7 @@
        "array([0, 3, 3, 3, 2, 4])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
