--- a/2-Data Analysis/1-Numpy/1_Numpy.ipynb
+++ b/2-Data Analysis/1-Numpy/1_Numpy.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "[[10, 20, 30], [40, 50, 60], [70, 80, 90]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "'1.18.5'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -327,20 +327,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "\u001b[1;31mType:\u001b[0m        module\n",
-       "\u001b[1;31mString form:\u001b[0m <module 'numpy' from 'C:\\\\Users\\\\Daney\\\\anaconda3\\\\lib\\\\site-packages\\\\numpy\\\\__init__.py'>\n",
-       "\u001b[1;31mFile:\u001b[0m        c:\\users\\daney\\anaconda3\\lib\\site-packages\\numpy\\__init__.py\n",
+       "\u001b[1;31mString form:\u001b[0m <module 'numpy' from 'C:\\\\Users\\\\diego\\\\anaconda3\\\\lib\\\\site-packages\\\\numpy\\\\__init__.py'>\n",
+       "\u001b[1;31mFile:\u001b[0m        c:\\users\\diego\\anaconda3\\lib\\site-packages\\numpy\\__init__.py\n",
        "\u001b[1;31mDocstring:\u001b[0m  \n",
        "NumPy\n",
        "=====\n",
@@ -457,13 +452,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -11748,7 +11738,7 @@
       "    __all__ = ['beta', 'binomial', 'bytes', 'chisquare', 'choice', 'dirich...\n",
       "\n",
       "FILE\n",
-      "    c:\\users\\daney\\anaconda3\\lib\\site-packages\\numpy\\random\\__init__.py\n",
+      "    c:\\users\\diego\\anaconda3\\lib\\site-packages\\numpy\\random\\__init__.py\n",
       "\n",
       "\n"
      ]
@@ -11767,7 +11757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -11776,7 +11766,7 @@
        "array([10, 20, 30, 40, 50, 60, 70, 80, 90])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11789,7 +11779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -11803,10 +11793,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x19afd481be0>"
+       "<matplotlib.image.AxesImage at 0x15851f79f70>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -11836,13 +11826,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -11898,7 +11883,7 @@
        "        [255, 255, 255]]], dtype=uint8)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11917,7 +11902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11935,7 +11920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -11960,7 +11945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -11988,7 +11973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -12018,7 +12003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -12049,7 +12034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -12089,81 +12074,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.17552375 0.32009391 0.91212909 0.25788088 0.04383465 0.76924861]\n",
-      "  [0.80732934 0.00482914 0.24750553 0.6810649  0.15960458 0.42484197]\n",
-      "  [0.3017357  0.93080693 0.65510212 0.27970343 0.00111389 0.42702512]\n",
-      "  [0.16894932 0.7177058  0.201462   0.24773203 0.7860617  0.02149783]\n",
-      "  [0.18621822 0.57382161 0.02328511 0.27324216 0.31572072 0.14740626]]\n",
-      "\n",
-      " [[0.06900184 0.7425264  0.36234489 0.34423936 0.78437144 0.15951143]\n",
-      "  [0.37231004 0.04170114 0.21553101 0.33427492 0.44904754 0.36011357]\n",
-      "  [0.25288685 0.82260455 0.69031509 0.59974794 0.6093564  0.04129954]\n",
-      "  [0.52001739 0.40478816 0.86591159 0.11657438 0.84565631 0.03840294]\n",
-      "  [0.02074045 0.39323276 0.43727502 0.19950736 0.87628614 0.21743918]]\n",
-      "\n",
-      " [[0.9906575  0.6935611  0.54925718 0.61760033 0.6516061  0.93126586]\n",
-      "  [0.69302892 0.05710585 0.18597193 0.33049024 0.69802469 0.55019095]\n",
-      "  [0.46830703 0.99151184 0.44676119 0.02502694 0.67300727 0.46488112]\n",
-      "  [0.5915173  0.05252653 0.24133026 0.49479461 0.32560357 0.99060046]\n",
-      "  [0.14045461 0.70511835 0.11596096 0.24631592 0.71455533 0.99533389]]\n",
-      "\n",
-      " [[0.66080998 0.4394297  0.44125681 0.41924208 0.26571974 0.27895728]\n",
-      "  [0.66898486 0.32002254 0.81674475 0.46414986 0.01726063 0.69449464]\n",
-      "  [0.20045291 0.58555713 0.17171112 0.2007411  0.13988334 0.38834309]\n",
-      "  [0.2608069  0.43167579 0.07136294 0.87385251 0.49304532 0.10285809]\n",
-      "  [0.18734551 0.83591005 0.80932415 0.40786168 0.91965788 0.35933622]]\n",
-      "\n",
-      " [[0.16429847 0.48858792 0.06626804 0.21277314 0.86049502 0.80609611]\n",
-      "  [0.44602207 0.16299535 0.64574916 0.69466238 0.52642076 0.67175994]\n",
-      "  [0.29569861 0.42559483 0.86171394 0.22118813 0.47085373 0.96898629]\n",
-      "  [0.76735369 0.94561315 0.90941432 0.23158484 0.42012957 0.21136665]\n",
-      "  [0.293711   0.55608786 0.25561236 0.08530984 0.047006   0.96762996]]\n",
-      "\n",
-      " [[0.44397812 0.40120697 0.02388584 0.74071427 0.27673604 0.93106659]\n",
-      "  [0.53344125 0.83796689 0.9840796  0.72523766 0.96317292 0.71453749]\n",
-      "  [0.72714303 0.48149889 0.53662501 0.71732904 0.31381386 0.55533717]\n",
-      "  [0.20556724 0.64913174 0.67022054 0.42272645 0.14805743 0.09599995]\n",
-      "  [0.59630374 0.31571988 0.28265288 0.91763384 0.91692655 0.70532281]]\n",
-      "\n",
-      " [[0.44495177 0.05867402 0.11320689 0.34632859 0.42545643 0.98402818]\n",
-      "  [0.69254088 0.57999977 0.95730768 0.62455924 0.33272267 0.58670609]\n",
-      "  [0.34553856 0.92735105 0.54089741 0.01917509 0.799501   0.71835295]\n",
-      "  [0.15980353 0.74068409 0.1427549  0.37217793 0.24992039 0.58527277]\n",
-      "  [0.68054834 0.05722324 0.7931432  0.35457505 0.50121241 0.10823137]]\n",
-      "\n",
-      " [[0.2823636  0.75980951 0.09635511 0.41424671 0.41990672 0.29799785]\n",
-      "  [0.70969089 0.10165541 0.90741308 0.98840038 0.5211982  0.23991914]\n",
-      "  [0.05604686 0.44717766 0.86599272 0.04148528 0.72945052 0.55220454]\n",
-      "  [0.01510906 0.39807144 0.61329161 0.37296845 0.1117531  0.08873127]\n",
-      "  [0.5120273  0.66493829 0.96203048 0.661059   0.27001692 0.93385174]]\n",
-      "\n",
-      " [[0.54685021 0.29071979 0.72083289 0.3448286  0.92830613 0.52356023]\n",
-      "  [0.150551   0.74153478 0.13015336 0.2469798  0.8630234  0.06756661]\n",
-      "  [0.99339247 0.44690807 0.71254625 0.12735307 0.15313791 0.35875592]\n",
-      "  [0.65678585 0.64271458 0.40208753 0.81044119 0.05115634 0.50000751]\n",
-      "  [0.4522508  0.44369101 0.07539602 0.57316211 0.65736937 0.85585903]]\n",
-      "\n",
-      " [[0.1546867  0.41137048 0.697192   0.94816843 0.97538031 0.91554714]\n",
-      "  [0.04710179 0.41599862 0.29539782 0.59919907 0.25683941 0.90522392]\n",
-      "  [0.58145569 0.04209116 0.96565902 0.9472948  0.57878011 0.45438252]\n",
-      "  [0.31826977 0.14749612 0.26895551 0.99901346 0.23330045 0.62555568]\n",
-      "  [0.33182199 0.63651189 0.44820805 0.44465806 0.44488725 0.0263626 ]]]\n",
-      "[[1 4 1 4]\n",
-      " [2 3 2 3]\n",
-      " [4 3 2 2]]\n",
-      "[9 6 9 6 6 5 7 8 8 5]\n"
+      "[0.28586397 0.9390993  0.53774184 0.45598116 0.7927174  0.94907631\n",
+      " 0.47869647 0.45188309 0.83915005 0.16503594]\n",
+      "[[0 3 3 4]\n",
+      " [3 0 2 3]\n",
+      " [2 0 4 2]]\n",
+      "[5 9 9 5 7 5 6 5 9 9]\n"
      ]
     }
    ],
@@ -12190,17 +12113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.55735327 0.54176063 0.56042378 0.38204809 0.11909418 0.84599912\n",
-      " 0.73974161 0.93235756 0.85932801 0.70810463]\n",
-      "[0.68096875 0.4086023  0.77458462 0.9844762  0.96548486 0.76197066\n",
-      " 0.72310304 0.1884888  0.47596313 0.28874562]\n"
+      "[0.71783409 0.04785513 0.94447198 0.68638004 0.58120733 0.14267862\n",
+      " 0.94591918 0.33999059 0.62043546 0.45295964]\n",
+      "[0.23976742 0.03450459 0.14859311 0.81086617 0.65310538 0.54446869\n",
+      " 0.04119477 0.46816625 0.88874673 0.47625856]\n"
      ]
     }
    ],
@@ -12218,17 +12141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.80393052, 0.44881998, 0.10962717, 0.43455711, 0.02232689,\n",
-       "       0.94551587, 0.38665202, 0.54842122, 0.40502326, 0.172673  ])"
+       "array([0.48062665, 0.94129943, 0.98997744, 0.84985492, 0.0145144 ,\n",
+       "       0.38020929, 0.18873571, 0.17228559, 0.71424933, 0.81385421])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
