--- a/2-Data Analysis/2-Pandas/6.Concat-And-Append.ipynb
+++ b/2-Data Analysis/2-Pandas/6.Concat-And-Append.ipynb
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
        "1  NaN  NaN   C1   D1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,6 +617,163 @@
     "df3 = make_df('AB', [0, 1])\n",
     "df4 = make_df('CD', [0, 1])\n",
     "display('df3', 'df4', \"pd.concat([df3, df4], axis=0)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"float: left; padding: 10px;\">\n",
+       "    <p style='font-family:\"Courier New\", Courier, monospace'>df3</p><div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A0</td>\n",
+       "      <td>B0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A1</td>\n",
+       "      <td>B1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>\n",
+       "    </div>\n",
+       "<div style=\"float: left; padding: 10px;\">\n",
+       "    <p style='font-family:\"Courier New\", Courier, monospace'>df4</p><div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>C0</td>\n",
+       "      <td>D0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>C1</td>\n",
+       "      <td>D1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>\n",
+       "    </div>\n",
+       "<div style=\"float: left; padding: 10px;\">\n",
+       "    <p style='font-family:\"Courier New\", Courier, monospace'>pd.concat([df3, df4], axis=1)</p><div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A0</td>\n",
+       "      <td>B0</td>\n",
+       "      <td>C0</td>\n",
+       "      <td>D0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A1</td>\n",
+       "      <td>B1</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>D1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>\n",
+       "    </div>"
+      ],
+      "text/plain": [
+       "df3\n",
+       "    A   B\n",
+       "0  A0  B0\n",
+       "1  A1  B1\n",
+       "\n",
+       "df4\n",
+       "    C   D\n",
+       "0  C0  D0\n",
+       "1  C1  D1\n",
+       "\n",
+       "pd.concat([df3, df4], axis=1)\n",
+       "    A   B   C   D\n",
+       "0  A0  B0  C0  D0\n",
+       "1  A1  B1  C1  D1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3 = make_df('AB', [0, 1])\n",
+    "df4 = make_df('CD', [0, 1])\n",
+    "display('df3', 'df4', \"pd.concat([df3, df4], axis=1)\")"
    ]
   },
   {
@@ -638,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +945,7 @@
        "1  A3  B3"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1230,20 +1387,23 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ABC</th>\n",
-       "      <th>2</th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ABC1</td>\n",
-       "      <td>21</td>\n",
+       "      <td>A1</td>\n",
+       "      <td>B1</td>\n",
+       "      <td>C1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ABC2</td>\n",
-       "      <td>22</td>\n",
+       "      <td>A2</td>\n",
+       "      <td>B2</td>\n",
+       "      <td>C2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1268,20 +1428,23 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>BCD</th>\n",
-       "      <th>5</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>BCD3</td>\n",
-       "      <td>53</td>\n",
+       "      <td>B3</td>\n",
+       "      <td>C3</td>\n",
+       "      <td>D3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>BCD4</td>\n",
-       "      <td>54</td>\n",
+       "      <td>B4</td>\n",
+       "      <td>C4</td>\n",
+       "      <td>D4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1306,40 +1469,40 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ABC</th>\n",
-       "      <th>2</th>\n",
-       "      <th>BCD</th>\n",
-       "      <th>5</th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ABC1</td>\n",
-       "      <td>21</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>A1</td>\n",
+       "      <td>B1</td>\n",
+       "      <td>C1</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ABC2</td>\n",
-       "      <td>22</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>A2</td>\n",
+       "      <td>B2</td>\n",
+       "      <td>C2</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>BCD3</td>\n",
-       "      <td>53</td>\n",
+       "      <td>B3</td>\n",
+       "      <td>C3</td>\n",
+       "      <td>D3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>BCD4</td>\n",
-       "      <td>54</td>\n",
+       "      <td>B4</td>\n",
+       "      <td>C4</td>\n",
+       "      <td>D4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1348,53 +1511,32 @@
       ],
       "text/plain": [
        "df5\n",
-       "    ABC   2\n",
-       "1  ABC1  21\n",
-       "2  ABC2  22\n",
+       "    A   B   C\n",
+       "1  A1  B1  C1\n",
+       "2  A2  B2  C2\n",
        "\n",
        "df6\n",
-       "    BCD   5\n",
-       "3  BCD3  53\n",
-       "4  BCD4  54\n",
+       "    B   C   D\n",
+       "3  B3  C3  D3\n",
+       "4  B4  C4  D4\n",
        "\n",
        "pd.concat([df5, df6])\n",
-       "    ABC    2   BCD    5\n",
-       "1  ABC1   21   NaN  NaN\n",
-       "2  ABC2   22   NaN  NaN\n",
-       "3   NaN  NaN  BCD3   53\n",
-       "4   NaN  NaN  BCD4   54"
+       "     A   B   C    D\n",
+       "1   A1  B1  C1  NaN\n",
+       "2   A2  B2  C2  NaN\n",
+       "3  NaN  B3  C3   D3\n",
+       "4  NaN  B4  C4   D4"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df5 = make_df(['ABC',2], [1, 2])\n",
-    "df6 = make_df(['BCD',5], [3, 4])\n",
+    "df5 = make_df('ABC', [1, 2])\n",
+    "df6 = make_df('BCD', [3, 4])\n",
     "display('df5', 'df6', 'pd.concat([df5, df6])')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function make_df in module __main__:\n",
-      "\n",
-      "make_df(cols, ind)\n",
-      "    Quickly make a DataFrame\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(make_df)"
    ]
   },
   {
@@ -1408,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1706,7 @@
        "4  B4  C4"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
